# causal-dynamical-triangulations

./: .auto-changelog  .bencher.toml  .codecov.yml  .coderabbit.yml  .gitignore  .markdownlint.json  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCES.md  cliff.toml  clippy.toml  cspell.json  dprint.json  justfile  pyproject.toml  rust-toolchain.toml  seed_finder.rs  ty.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codecov.yml  kani.yml  performance.yml  rust-clippy.yml
benches/: README.md  cdt_benchmarks.rs
docs/: CLI_EXAMPLES.md  PERFORMANCE_TESTING.md  TODO.md  moves.md  project.md  testing.md
examples/: basic_cdt.rs  find_good_seeds.rs
examples/scripts/: README.md  basic_simulation.sh  parameter_sweep.sh  performance_test.sh
proptest-regressions/cdt/: triangulation.txt
scripts/: README.md  benchmark_utils.py  changelog_utils.py  coverage_report.py  enhance_commits.py  hardware_utils.py  performance_analysis.py  pyproject.toml  run_all_examples.sh  subprocess_utils.py
scripts/tests/: __init__.py  conftest.py  test_benchmark_models.py  test_benchmark_utils.py  test_changelog_tag_size_limit.py  test_changelog_utils.py  test_hardware_utils.py  test_performance_analysis.py  test_release_notes_postprocessor.py  test_subprocess_utils.py
src/: config.rs  errors.rs  lib.rs  main.rs  util.rs
src/cdt/: action.rs  ergodic_moves.rs  metropolis.rs  triangulation.rs
src/geometry/: mesh.rs  operations.rs  traits.rs
src/geometry/backends/: delaunay.rs  mock.rs
src/triangulations/: causal.rs  delaunay_triangulations.rs  triangulation.rs
tests/: cli.rs  integration_tests.rs
