[package]
name = "causal-dynamical-triangulations"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Adam Getchell <adam@adamgetchell.org>"]
homepage = "https://github.com/acgetchell/causal-dynamical-triangulations"
repository = "https://github.com/acgetchell/causal-dynamical-triangulations"
description = "Causal Dynamical Triangulations in d-dimensions"
license = "BSD-3-Clause"
keywords = ["quantum", "gravity", "spacetime", "simulation", "triangulation", "physics", "causal"]
categories = ["science", "mathematics", "algorithms", "simulation"]
readme = "README.md"

[[bin]]
name = "cdt-rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
float-ord = "0.3.2"
rand = "0.9.2"
delaunay = "0.5.0"
assert_cmd = "2.0.17"


[dev-dependencies]
predicates = "3.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
multiple_crate_versions = "allow"
