[package]
name = "causal-dynamical-triangulations"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Adam Getchell <adam@adamgetchell.org>"]
homepage = "https://github.com/acgetchell/causal-dynamical-triangulations"
repository = "https://github.com/acgetchell/causal-dynamical-triangulations"
description = "Causal Dynamical Triangulations in d-dimensions"
license = "BSD-3-Clause"
keywords = ["quantum", "gravity", "spacetime", "simulation", "triangulation", "physics", "causal"]
categories = ["science", "mathematics", "algorithms", "simulation"]
readme = "README.md"

# Features removed - backend system is now internal implementation detail
# Both delaunay and mock backends are always compiled

[[bin]]
name = "cdt"
path = "src/main.rs"

[[bench]]
name = "cdt_benchmarks"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
float-ord = "0.3.2"
rand = "0.9.2"
delaunay = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
num-traits = "0.2"
log = "0.4"
env_logger = "0.11.8"
thiserror = "2.0.17"
uuid = { version = "1.11", features = ["v4"] }
dirs = "6.0.0"


[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
approx = "0.5.1"
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "warn"

[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = { level = "warn", priority = -1 }
# Allow multiple crate versions due to transitive dependencies
multiple_crate_versions = "allow"
